--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,6 +7,18 @@
   }
 }
 
+/* container */
+.container() {
+  width: 320px;
+  margin: 0 auto;
+  @media @tablet-widths {
+    width: 640px;
+  }
+  @media @desktop-widths {
+    width: 1200px;
+  }
+}
+
 /* opacity */
 
 .opacity (@opacity: 0.5) {
