--- a/less/normalize.less
+++ b/less/normalize.less
@@ -1,18 +1,17 @@
 /* *********************************** */
 /*  2. Custom Normalize                */
-body {
-  margin: 0;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
-  text-transform: uppercase;
-
+  font-weight: 700;
   color: @base-text-color;
-  background-color: @base-bg-color;
-
-  font-family: 'Roboto Condensed', Tahoma, Verdana, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.3;
+  text-transform: uppercase;
 }
 
 h1,
@@ -23,19 +22,17 @@ p {
   margin-bottom: 10px;
 }
 
-h1 {
-  color: @base-text-color;
+p {
+  font-family: 'Roboto', sans-serif;
+}
 
+h1 {
   font-size: 21px;
-  font-weight: bold;
   line-height: 26px;
 }
 
 h2 {
-  color: @base-text-color;
-
   font-size: 21px;
-  font-weight: bold;
   line-height: 21px;
 }
 
