--- a/less/style.less
+++ b/less/style.less
@@ -10,4 +10,5 @@
 @import "blocks/aside.less";
 @import "blocks/menu-vertical.less";
 @import "blocks/main.less";
+@import "blocks/front.less";
 @import "blocks/footer.less";
