--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,10 @@
+@rekord-blue: #0058A7;
+@rekord-red: #e31d24;
 @base-bg-color: #ffffff;
 @base-text-color: #000000;
+@light-text-color: #ffffff;
+@aside-bg-color: @rekord-blue;
+@footer-bg-color: #446078;
 
 // other and other
 @bg-lightgrey: #f8f5f2;
