--- a/less/blocks/body.less
+++ b/less/blocks/body.less
@@ -1,4 +1,17 @@
 body {
-  background: url(img/bg-r.jpg) 100% 0 no-repeat fixed, 
-              url(img/bg-r.jpg) 0 0 no-repeat fixed;
+  margin: 0;
+
+  // text-align: center;
+  // text-transform: uppercase;
+
+  color: @base-text-color;  
+
+  font-family: 'Roboto Condensed', Tahoma, Verdana, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.3;
+
+  background-color: @base-bg-color;
+  background: url(../img/bg-body.jpg) 100% 0 no-repeat fixed, 
+              url(../img/bg-body.jpg) 0 0 no-repeat fixed;
 }
