--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,6 +7,11 @@
   }
 }
 
+.center() {
+  display: block;
+  margin: 0 auto;
+}
+
 /* container */
 .container() {
   width: 320px;
@@ -18,6 +23,21 @@
     width: 1200px;
   }
 }
+
+// size-600x300, etc.
+.size-600x300 {
+  width: 600px;
+  height: 300px;
+}
+.size-300x300 {
+  width: 300px;
+  height: 300px;
+}
+.size-tmb {
+  width: 225px;
+  height: 150px;
+}
+
 
 /* opacity */
 
