--- a/less/blocks/front.less
+++ b/less/blocks/front.less
@@ -34,7 +34,7 @@
     width: 600px;
     float: left;
     padding: 20px;
-    padding-right: 10px;    
+    padding-right: 0;    
 
     & h2 {
       font-size: 24px;
@@ -44,29 +44,40 @@
 
     & article {
       .clearfix();
+      margin-top: 20px;
+      padding-bottom: 20px;      
+      border-bottom: dotted 1px @rekord-blue;
     }
 
     &--date {   
       box-sizing: border-box;       
       float: left;
-      width: 55px;
-      padding-right: 5px;
+      width: 35px;      
+      margin-right: 20px;
       text-align: center;
     }
 
     &--day,
     &--month {
+      font-size: 18px;
       border-bottom: solid 1px @rekord-blue;
+    }
+
+    &--day{
+      font-weight: 700;
     }
 
     &--foto {
       float: left;
+      box-sizing: border-box;
+      border: solid 1px @rekord-blue;
       width: 225px;
     }
 
     &--title {
       float: right;
-      margin-left: 20px;
+      /* padding-left: 15px; */
+      box-sizing: border-box;
       width: 280px;
     }
   }
