--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -5,7 +5,45 @@ header {
 
   & .logo {
     float: left;
-    padding-left: 30px;
-    padding-top: 21px;
+    padding: 21px 30px;    
+
+    & a {
+      line-height: 0;
+    }
+  }
+
+  & .title {    
+    float: left;
+    padding-top: 26px;
+
+    & h1 {
+      padding: 0;
+      margin: 0;
+      color: @rekord-blue;
+      text-align: left;
+      font-style: italic;
+      text-transform: none;
+      font-weight: normal;
+      font-size: 24px;
+    }
+  }
+
+  & .utilities {
+    position: relative;
+    float: right;
+    padding: 26px 30px;
+    text-align: right;
+
+    &__ftvi {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+    &__search {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
 }
