--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -30,20 +30,22 @@ header {
 
   & .utilities {
     position: relative;
+    box-sizing: border-box;
+    min-height: 150px;
     float: right;
     padding: 26px 30px;
     text-align: right;
 
     &__ftvi {
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 26px;
+      right: 30px;
     }
 
     &__search {
       position: absolute;
-      bottom: 0;
-      right: 0;
+      bottom: 26px;
+      right: 30px;
     }
   }
 }
